[package]
name = "blinds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
lss_driver = { git = "https://github.com/dmweis/lss_driver", branch = "main" }
tokio = { version = "1.18", features = ["macros", "time", "rt-multi-thread"] }
anyhow = "*"
