[package]
name = "blinds"
description = "Driver for smart blinds"
version = "0.5.4"
edition = "2021"
publish = false
authors = ["David Weis <dweis7@gmail.com>"]
license = "MIT OR APACHE"
repository = "https://github.com/dmweis/blinds"
readme = "README.md"

[package.metadata.deb]
maintainer = "David Weis <dweis7@gmail.com>"
maintainer-scripts = "debian/"

[package.metadata.deb.systemd-units]

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
lss_driver = { git = "https://github.com/dmweis/lss_driver", branch = "main" }
tokio = { version = "1", features = [
    "macros",
    "time",
    "rt-multi-thread",
    "fs",
    "io-util",
] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4.17"
simplelog = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
directories = "4.0"
actix-web = "4"
actix-files = "0.6"
async-trait = "0.1"
mqtt-router = { git = "https://github.com/dmweis/mqtt-router", branch = "main" }
rumqttc = "0.13.0"
