[package]
authors = ["David Weis <dweis7@gmail.com>"]
description = "Driver for smart blinds"
edition = "2021"
license = "MIT OR APACHE"
name = "blinds"
publish = false
readme = "README.md"
repository = "https://github.com/dmweis/blinds"
version = "0.5.6"

[package.metadata.deb]
maintainer = "David Weis <dweis7@gmail.com>"
maintainer-scripts = "debian/"

[package.metadata.deb.systemd-units]

[dependencies]
actix-files = "0.6"
actix-web = "4"
anyhow = "1.0"
async-trait = "0.1"
clap = {version = "3.1.18", features = ["derive"]}
directories = "4.0"
log = "0.4.17"
lss_driver = {git = "https://github.com/dmweis/lss_driver", branch = "main"}
mqtt-router = {git = "https://github.com/dmweis/mqtt-router", branch = "main"}
rumqttc = "0.13.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.8"
simplelog = "0.12.0"
thiserror = "1.0"
tokio = {version = "1", features = [
  "macros",
  "time",
  "rt-multi-thread",
  "fs",
  "io-util",
]}
